--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TutorMe</title>
     <style>
-        body { font-family: sans-serif; margin: 0; padding: 20px; background-color: #f4f4f4; }
-        .container { max-width: 800px; margin: auto; background: white; padding: 20px; border-radius: 8px; }
-        h1, h2 { text-align: center; }
+        body { font-family: sans-serif; margin: 0; background-color: #f4f4f4; }
+        .header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 15px 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .header .logo {
+            font-size: 1.8em;
+            font-weight: bold;
+        }
+        .header nav a {
+            color: white;
+            text-decoration: none;
+            margin-left: 20px;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .header nav a:hover {
+            background-color: #34495e;
+        }
+        .container { max-width: 800px; margin: 20px auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        h1, h2 { text-align: center; color: #333; }
         #booking, #videos { margin-bottom: 40px; }
+        select, button { padding: 10px; font-size: 1em; margin-left: 10px; border-radius: 5px; border: 1px solid #ccc; }
+        button { background-color: #3498db; color: white; cursor: pointer; border: none; }
+        button:hover { background-color: #2980b9; }
         .video-container {
             position: relative;
             padding-bottom: 56.25%; /* 16:9 */
@@ -17,6 +43,7 @@
             max-width: 100%;
             background: #000;
             margin-bottom: 20px;
+            border-radius: 8px;
         }
         .video-container iframe {
             position: absolute;
@@ -29,9 +56,16 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="logo">TutorMe</div>
+        <nav>
+            <a href="login.html">Admin Login</a>
+        </nav>
+    </header>
+
     <div class="container">
         <h1>Welcome to TutorMe!</h1>
-        <p>Book a tutoring session with us or check out our educational videos.</p>
+        <p style="text-align: center;">Book a tutoring session with us or check out our educational videos.</p>
 
         <div id="booking">
             <h2>Book a Session</h2>
@@ -52,12 +86,12 @@
     <script>
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyAfOf2vN2YzPUAO6kfz4HSu8HYkK8TWZHY",
+            authDomain: "tutorme-99ca8.firebaseapp.com",
+            projectId: "tutorme-99ca8",
+            storageBucket: "tutorme-99ca8.appspot.com",
+            messagingSenderId: "1012080798952",
+            appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d"
         };
 
         // Initialize Firebase
@@ -77,7 +111,7 @@
 
         // Load videos
         const videoList = document.getElementById('video-list');
-        db.collection("videos").get().then((querySnapshot) => {
+        db.collection("videos").orderBy("videoId").get().then((querySnapshot) => {
             querySnapshot.forEach((doc) => {
                 let videoDiv = document.createElement("div");
                 videoDiv.classList.add("video-container");
