--- a/index.html
+++ b/index.html
@@ -4,134 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TutorMe</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
-        body { font-family: sans-serif; margin: 0; background-color: #f4f4f4; }
+        body { font-family: 'Segoe UI', Arial, sans-serif; margin: 0; background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%); }
         .header {
             background-color: #2c3e50;
             color: white;
-            padding: 15px 30px;
+            padding: 20px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            box-shadow: 0 2px 8px rgba(44,62,80,0.08);
         }
-        .header .logo {
-            font-size: 1.8em;
-            font-weight: bold;
-        }
+        .header .logo { font-size: 2em; font-weight: bold; }
         .header nav a {
             color: white;
             text-decoration: none;
-            margin-left: 20px;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+            margin-left: 30px;
+            padding: 10px 20px;
+            border-radius: 6px;
+            font-size: 1.1em;
+            transition: background 0.2s;
         }
-        .header nav a:hover {
-            background-color: #34495e;
+        .header nav a:hover { background: #34495e; }
+        .welcome-container {
+            max-width: 600px;
+            margin: 80px auto;
+            background: white;
+            padding: 40px 30px;
+            border-radius: 16px;
+            box-shadow: 0 4px 24px rgba(44,62,80,0.10);
+            text-align: center;
         }
-        .container { max-width: 800px; margin: 20px auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        h1, h2 { text-align: center; color: #333; }
-        #booking, #videos { margin-bottom: 40px; }
-        select, button { padding: 10px; font-size: 1em; margin-left: 10px; border-radius: 5px; border: 1px solid #ccc; }
-        button { background-color: #3498db; color: white; cursor: pointer; border: none; }
-        button:hover { background-color: #2980b9; }
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 */
-            height: 0;
-            overflow: hidden;
-            max-width: 100%;
-            background: #000;
-            margin-bottom: 20px;
-            border-radius: 8px;
+        h1 { color: #3498db; font-size: 2.5em; margin-bottom: 10px; }
+        p { color: #555; font-size: 1.2em; margin-bottom: 30px; }
+        .slide-links {
+            display: flex;
+            justify-content: center;
+            gap: 40px;
         }
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+        .slide-link {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background: #f4f8fb;
+            padding: 30px 40px;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(44,62,80,0.06);
+            text-decoration: none;
+            color: #2c3e50;
+            font-size: 1.2em;
+            transition: box-shadow 0.2s, background 0.2s;
+        }
+        .slide-link:hover {
+            background: #eaf6ff;
+            box-shadow: 0 4px 16px rgba(44,62,80,0.12);
+        }
+        .slide-link img {
+            width: 48px;
+            height: 48px;
+            margin-bottom: 12px;
         }
     </style>
 </head>
 <body>
-
     <header class="header">
         <div class="logo">TutorMe</div>
         <nav>
             <a href="login.html">Admin Login</a>
         </nav>
     </header>
-
-    <div class="container">
+    <div class="welcome-container">
         <h1>Welcome to TutorMe!</h1>
-        <p style="text-align: center;">Book a tutoring session with us or check out our educational videos.</p>
-
-        <div id="booking">
-            <h2>Book a Session</h2>
-            <select id="available-dates"></select>
-            <button onclick="bookSession()">Book Now</button>
-        </div>
-
-        <div id="videos">
-            <h2>Our Videos</h2>
-            <div id="video-list"></div>
+        <p>Book a tutoring session or explore our educational video library.</p>
+        <div class="slide-links">
+            <a class="slide-link" href="bookings.html">
+                <img src="https://img.icons8.com/ios-filled/50/3498db/calendar.png" alt="Bookings">
+                Bookings
+            </a>
+            <a class="slide-link" href="videos.html">
+                <img src="https://img.icons8.com/ios-filled/50/3498db/youtube-play.png" alt="Videos">
+                Videos
+            </a>
         </div>
     </div>
-
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
-
-    <script>
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyAfOf2vN2YzPUAO6kfz4HSu8HYkK8TWZHY",
-            authDomain: "tutorme-99ca8.firebaseapp.com",
-            projectId: "tutorme-99ca8",
-            storageBucket: "tutorme-99ca8.appspot.com",
-            messagingSenderId: "1012080798952",
-            appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d"
-        };
-
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-
-        // Load available dates
-        const availableDates = document.getElementById('available-dates');
-        db.collection("availableSlots").where("booked", "==", false).get().then((querySnapshot) => {
-            querySnapshot.forEach((doc) => {
-                let option = document.createElement("option");
-                option.value = doc.id;
-                option.text = new Date(doc.data().date).toLocaleString();
-                availableDates.appendChild(option);
-            });
-        });
-
-        // Load videos
-        const videoList = document.getElementById('video-list');
-        db.collection("videos").orderBy("videoId").get().then((querySnapshot) => {
-            querySnapshot.forEach((doc) => {
-                let videoDiv = document.createElement("div");
-                videoDiv.classList.add("video-container");
-                videoDiv.innerHTML = `<iframe src="https://www.youtube.com/embed/${doc.data().videoId}" frameborder="0" allowfullscreen></iframe>`;
-                videoList.appendChild(videoDiv);
-            });
-        });
-
-        function bookSession() {
-            const selectedDateId = availableDates.value;
-            if (selectedDateId) {
-                db.collection("availableSlots").doc(selectedDateId).update({
-                    booked: true
-                }).then(() => {
-                    alert("Session booked successfully!");
-                    location.reload();
-                });
-            }
-        }
-    </script>
-
 </body>
 </html>
