--- a/login.html
+++ b/login.html
@@ -43,10 +43,14 @@
 </head>
 <body>
 
+    <!-- Consistent header for all pages -->
     <header class="header">
-        <div class="logo">TutorMe Admin</div>
+        <div class="logo">TutorMe</div>
         <nav>
-            <a href="index.html">← Back to Home</a>
+            <a href="index.html">Home</a>
+            <a href="bookings.html">Bookings</a>
+            <a href="videos.html">Videos</a>
+            <a href="login.html">Admin Login</a>
         </nav>
     </header>
 
