--- a/dashboard.html
+++ b/dashboard.html
@@ -2,75 +2,156 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - TutorMe</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: sans-serif; margin: 0; background-color: #f4f4f4; }
+        :root {
+            --col-pri: #3498db;
+            --col-sec: #222;
+            --col-bg: #f4f8fb;
+            --font-heading: "Montserrat", Arial, sans-serif;
+            --font-body: "Montserrat", Arial, sans-serif;
+        }
+        body {
+            font-family: var(--font-body);
+            margin: 0;
+            background: var(--col-bg);
+            color: var(--col-sec);
+            min-height: 100vh;
+        }
+        .bg-fade {
+            position: fixed;
+            top: 0; left: 0; width: 100vw; height: 100vh;
+            z-index: 0;
+            background: url('https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=1200&q=80') center center/cover no-repeat;
+            opacity: 0.09;
+            pointer-events: none;
+        }
         .header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 15px 30px;
+            background: var(--col-pri);
+            color: #fff;
+            padding: 18px 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            box-shadow: 0 2px 8px rgba(44,62,80,0.08);
+            position: relative;
+            z-index: 2;
         }
         .header .logo {
-            font-size: 1.8em;
-            font-weight: bold;
+            font-size: 2em;
+            font-weight: 700;
+            letter-spacing: 1px;
+            font-family: var(--font-heading);
+        }
+        .header nav {
+            display: flex;
+            gap: 18px;
         }
         .header nav a, .header nav button {
-            color: white;
+            color: #fff;
             text-decoration: none;
-            margin-left: 20px;
+            padding: 8px 20px;
+            border-radius: 6px;
+            font-size: 1em;
+            font-family: var(--font-body);
             background: none;
             border: none;
-            font-size: 1em;
             cursor: pointer;
-            font-family: sans-serif;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+            transition: background 0.2s, color 0.2s;
         }
-         .header nav a:hover, .header nav button:hover {
-            background-color: #34495e;
+        .header nav a:hover, .header nav button:hover {
+            background: #217dbb;
+            color: #fff;
         }
-        .container { max-width: 800px; margin: 20px auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        .management-section { margin-bottom: 40px; padding: 20px; border: 1px solid #eee; border-radius: 5px; }
-        h2 { border-bottom: 2px solid #3498db; padding-bottom: 10px; }
-        input { padding: 10px; font-size: 1em; margin-right: 10px; border-radius: 5px; border: 1px solid #ccc; width: calc(100% - 125px); }
-        button { padding: 10px 20px; font-size: 1em; background-color: #3498db; color: white; cursor: pointer; border: none; border-radius: 5px; }
-        button:hover { background-color: #2980b9; }
+        .container {
+            max-width: 520px;
+            margin: 48px auto 32px auto;
+            background: #fff;
+            padding: 36px 28px 28px 28px;
+            border-radius: 16px;
+            box-shadow: 0 4px 24px rgba(44,62,80,0.10);
+            position: relative;
+            z-index: 1;
+        }
+        .management-section {
+            margin-bottom: 32px;
+            padding: 0 0 18px 0;
+            border-bottom: 1px solid #e0eafc;
+        }
+        .management-section:last-child {
+            border-bottom: none;
+        }
+        h2 {
+            font-family: var(--font-heading);
+            color: var(--col-pri);
+            font-size: 1.3em;
+            font-weight: 600;
+            margin-bottom: 18px;
+        }
+        input[type="datetime-local"], input[type="text"] {
+            padding: 12px;
+            font-size: 1em;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            width: 100%;
+            margin-bottom: 12px;
+            box-sizing: border-box;
+            font-family: var(--font-body);
+        }
+        button {
+            padding: 12px 0;
+            width: 100%;
+            background-color: var(--col-pri);
+            color: #fff;
+            cursor: pointer;
+            border: none;
+            border-radius: 6px;
+            font-size: 1em;
+            font-family: var(--font-body);
+            font-weight: 600;
+            transition: background 0.2s;
+        }
+        button:hover {
+            background-color: #217dbb;
+        }
+        @media (max-width: 600px) {
+            .header { padding: 12px 8px; }
+            .container { padding: 18px 6px; }
+        }
     </style>
 </head>
 <body>
-
+    <div class="bg-fade"></div>
     <header class="header">
-        <div class="logo">Admin Dashboard</div>
+        <div class="logo">TutorMe</div>
         <nav>
-            <a href="index.html" target="_blank">View Site</a>
+            <a href="index.html">Home</a>
+            <a href="bookings.html">Bookings</a>
+            <a href="videos.html">Videos</a>
+            <a href="login.html">Admin Login</a>
             <button onclick="logout()">Logout</button>
         </nav>
     </header>
-
     <div class="container">
         <div id="manage-dates" class="management-section">
             <h2>Add Available Date Slot</h2>
             <input type="datetime-local" id="new-date">
             <button onclick="addDate()">Add Date</button>
         </div>
-
         <div id="manage-videos" class="management-section">
             <h2>Add New YouTube Video</h2>
             <input type="text" id="video-id" placeholder="Enter YouTube Video ID (e.g., dQw4w9WgXcQ)">
             <button onclick="addVideo()">Add Video</button>
         </div>
     </div>
-
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
-
     <script>
         // Your web app's Firebase configuration
         const firebaseConfig = {
@@ -90,7 +171,6 @@
         // Auth guard: Check if user is logged in
         auth.onAuthStateChanged(user => {
             if (!user) {
-                // If no user, redirect to login page
                 window.location.replace('login.html');
             }
         });
@@ -115,7 +195,7 @@
             const videoIdInput = document.getElementById('video-id');
             if (videoIdInput.value) {
                 db.collection("videos").add({
-                    videoId: videoIdInput.value // Storing just the ID
+                    videoId: videoIdInput.value
                 }).then(() => {
                     alert("Video added successfully!");
                     videoIdInput.value = "";
@@ -128,11 +208,9 @@
 
         function logout() {
             auth.signOut().then(() => {
-                // Redirect to login page after sign out is successful
                 window.location.replace('login.html');
             });
         }
     </script>
-
 </body>
 </html>
