--- a/index.html
+++ b/index.html
@@ -3,80 +3,232 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TutorMe</title>
+    <title>TutorMe | About Us</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
-        body { font-family: 'Segoe UI', Arial, sans-serif; margin: 0; background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%); }
+        :root {
+            --col-pri: #3498db;
+            --col-sec: #222;
+            --col-bg: #f4f8fb;
+        }
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            margin: 0;
+            color: #222;
+            background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
+            min-height: 100vh;
+            position: relative;
+        }
+        .bg-fade {
+            position: fixed;
+            top: 0; left: 0; width: 100vw; height: 100vh;
+            z-index: 0;
+            background: url('https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=1200&q=80') center center/cover no-repeat;
+            opacity: 0.13;
+            pointer-events: none;
+        }
         .header {
-            background-color: #2c3e50;
+            background: rgba(26,37,51,0.92);
             color: white;
-            padding: 20px 40px;
+            padding: 16px 32px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0 2px 8px rgba(44,62,80,0.08);
+            position: relative;
+            z-index: 2;
+            box-shadow: 0 2px 8px rgba(44,62,80,0.04);
         }
-        .header .logo { font-size: 2em; font-weight: bold; }
+        .header .logo {
+            font-size: 1.6em;
+            font-weight: 600;
+            letter-spacing: 1px;
+        }
+        .header nav {
+            display: flex;
+            gap: 18px;
+        }
         .header nav a {
             color: white;
             text-decoration: none;
-            margin-left: 30px;
-            padding: 10px 20px;
-            border-radius: 6px;
-            font-size: 1.1em;
+            padding: 6px 18px;
+            border-radius: 5px;
+            font-size: 1em;
+            font-weight: 400;
             transition: background 0.2s;
         }
-        .header nav a:hover { background: #34495e; }
-        .welcome-container {
-            max-width: 600px;
-            margin: 80px auto;
-            background: white;
-            padding: 40px 30px;
-            border-radius: 16px;
-            box-shadow: 0 4px 24px rgba(44,62,80,0.10);
-            text-align: center;
+        .header nav a:hover {
+            background: #3498db;
         }
-        h1 { color: #3498db; font-size: 2.5em; margin-bottom: 10px; }
-        p { color: #555; font-size: 1.2em; margin-bottom: 30px; }
+        .about-container {
+            max-width: 420px;
+            margin: 60px auto 40px auto;
+            background: rgba(255,255,255,0.92);
+            padding: 32px 22px 24px 22px;
+            border-radius: 14px;
+            box-shadow: 0 2px 16px rgba(44,62,80,0.07);
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+        h1 {
+            color: #3498db;
+            font-size: 2em;
+            margin-bottom: 12px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+        }
+        h2 {
+            color: #1a2533;
+            margin-top: 28px;
+            font-size: 1.15em;
+            font-weight: 500;
+        }
+        p {
+            color: #444;
+            font-size: 1.08em;
+            margin-bottom: 18px;
+            line-height: 1.6;
+        }
+        ul {
+            text-align: left;
+            display: inline-block;
+            margin: 0 auto 18px auto;
+            padding-left: 0;
+            font-size: 1em;
+            color: #333;
+        }
+        ul li {
+            margin-bottom: 10px;
+            list-style: none;
+            position: relative;
+            padding-left: 20px;
+        }
+        ul li:before {
+            content: "✔";
+            color: #3498db;
+            position: absolute;
+            left: 0;
+            font-size: 1em;
+        }
         .slide-links {
             display: flex;
             justify-content: center;
-            gap: 40px;
+            gap: 24px;
+            margin-top: 24px;
         }
         .slide-link {
             display: flex;
             flex-direction: column;
             align-items: center;
             background: #f4f8fb;
-            padding: 30px 40px;
-            border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(44,62,80,0.06);
+            padding: 16px 22px;
+            border-radius: 8px;
+            box-shadow: 0 1px 4px rgba(44,62,80,0.04);
             text-decoration: none;
             color: #2c3e50;
-            font-size: 1.2em;
-            transition: box-shadow 0.2s, background 0.2s;
+            font-size: 1em;
+            font-weight: 500;
+            transition: box-shadow 0.2s, background 0.2s, color 0.2s;
+            border: 1px solid #e0eafc;
         }
         .slide-link:hover {
             background: #eaf6ff;
-            box-shadow: 0 4px 16px rgba(44,62,80,0.12);
+            color: #3498db;
+            box-shadow: 0 2px 8px rgba(44,62,80,0.10);
+            border-color: #3498db;
         }
         .slide-link img {
-            width: 48px;
-            height: 48px;
-            margin-bottom: 12px;
+            width: 32px;
+            height: 32px;
+            margin-bottom: 6px;
+        }
+        @media (max-width: 600px) {
+            .about-container { padding: 16px 4px; }
+            .slide-links { flex-direction: column; gap: 12px; }
+            .header { padding: 12px 8px; }
+        }
+        /* Custom Edit Info Button */
+        .custom__edit--info {
+            position: fixed;
+            width: 40px;
+            height: 40px;
+            bottom: 1em;
+            right: 1em;
+            z-index: 3000;
+            border-radius: 50%;
+            padding: 0;
+            text-align: center;
+            margin: 1em;
+            background: #745B99;
+            color: #fff;
+            font-size: 13px;
+            font-weight: 700;
+            box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.35);
+        }
+        .custom__edit--info svg {
+            line-height: 40px;
+            height: 40px;
+            width: 40px;
+            cursor: pointer;
+        }
+        .custom__edit--info div {
+            position: absolute;
+            display: block;
+            white-space: nowrap;
+            bottom: 0;
+            right: 100%;
+            border-radius: 4px;
+            padding: 0 2em;
+            box-shadow: inherit;
+            background: inherit;
+            opacity: 0;
+            transform: translateX(0);
+            visibility: hidden;
+            transition: opacity .2s ease, visibility 0s ease .2s, transform .2s ease;
+        }
+        .custom__edit--info p {
+            white-space: nowrap;
+            line-height: 1.8;
+            text-align: left;
+            text-transform: none;
+        }
+        .custom__edit--info small {
+            margin-right: 5px;
+            opacity: .75;
+            text-transform: uppercase;
+            user-select: none;
+        }
+        .custom__edit--info:hover div {
+            opacity: 1;
+            visibility: visible;
+            transform: translateX(-1em);
+            transition-delay: 0s;
         }
     </style>
 </head>
 <body>
+    <div class="bg-fade"></div>
     <header class="header">
         <div class="logo">TutorMe</div>
         <nav>
+            <a href="bookings.html">Bookings</a>
+            <a href="videos.html">Videos</a>
             <a href="login.html">Admin Login</a>
         </nav>
     </header>
-    <div class="welcome-container">
-        <h1>Welcome to TutorMe!</h1>
-        <p>Book a tutoring session or explore our educational video library.</p>
+    <div class="about-container">
+        <h1>About Us</h1>
+        <p>
+            <strong>TutorMe</strong> helps students reach their academic goals with expert tutors and a curated video library.<br>
+            Our mission: make learning accessible, engaging, and effective.
+        </p>
+        <h2>Why TutorMe?</h2>
+        <ul>
+            <li>Experienced tutors in many subjects</li>
+            <li>Simple online session booking</li>
+            <li>Free, high-quality educational videos</li>
+            <li>Supportive, student-focused community</li>
+        </ul>
         <div class="slide-links">
             <a class="slide-link" href="bookings.html">
                 <img src="https://img.icons8.com/ios-filled/50/3498db/calendar.png" alt="Bookings">
@@ -88,5 +240,6 @@
             </a>
         </div>
     </div>
+   
 </body>
 </html>
