--- a/videos.html
+++ b/videos.html
@@ -56,11 +56,13 @@
     </style>
 </head>
 <body>
+    <!-- Consistent header for all pages -->
     <header class="header">
         <div class="logo">TutorMe</div>
         <nav>
             <a href="index.html">Home</a>
             <a href="bookings.html">Bookings</a>
+            <a href="videos.html">Videos</a>
             <a href="login.html">Admin Login</a>
         </nav>
     </header>
