--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <p>Fun experiments and clear explanations to master GCSE Chemistry concepts.</p>
         </div>
         <div class="subject biology">
-            <img src="https://img.icons8.com/color/96/plant-cell.png" alt="Biology Icon"/>
+            <img src="https://img.icons8.com/?size=100&id=9116&format=png&color=000000" alt="Biology Icon"/>
             <h3>Biology (GCSE)</h3>
             <p>Interactive lessons on life sciences, tailored for GCSE students.</p>
         </div>
