--- a/book.html
+++ b/book.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos - TutorMe</title>
+    <title>Book Session - TutorMe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         :root {
@@ -53,31 +53,52 @@
             color: var(--physics);
         }
         .container {
-            max-width: 900px;
+            max-width: 400px;
             margin: 2.5rem auto;
             background: #fff;
             padding: 2rem 1.5rem;
             border-radius: 16px;
             box-shadow: 0 2px 12px #0002;
         }
-        h2 { color: var(--accent); text-align: center; margin-bottom: 30px; }
-        .video-list { display: grid; grid-template-columns: 1fr 1fr; gap: 30px; }
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%;
-            height: 0;
-            overflow: hidden;
-            background: #000;
-            border-radius: 12px;
-            box-shadow: 0 2px 8px #0001;
+        h2 {
+            color: var(--accent);
+            text-align: center;
         }
-        .video-container iframe {
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%;
-            border-radius: 12px;
+        label {
+            display: block;
+            margin-top: 1rem;
+            margin-bottom: 0.5rem;
+            font-weight: bold;
         }
-        @media (max-width: 700px) {
-            .video-list { grid-template-columns: 1fr; }
+        input {
+            width: 100%;
+            padding: 0.8rem;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 1rem;
+        }
+        button {
+            background: var(--accent);
+            color: #fff;
+            padding: 1rem 2rem;
+            border-radius: 40px;
+            text-decoration: none;
+            font-weight: bold;
+            margin-top: 1.5rem;
+            display: block;
+            width: 100%;
+            border: none;
+            font-size: 1.1rem;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        button:hover {
+            background: var(--physics);
+        }
+        .msg {
+            text-align: center;
+            margin-top: 1rem;
+            color: var(--accent);
         }
         footer {
             background: var(--accent);
@@ -108,40 +129,19 @@
         <a href="login.html">Admin Login</a>
     </nav>
     <div class="container">
-        <h2>Our Educational Videos</h2>
-        <div class="video-list" id="video-list"></div>
+        <h2>Enter Your Details</h2>
+        <form id="booking-form">
+            <label for="name">Name</label>
+            <input type="text" id="name" required>
+            <label for="email">Email</label>
+            <input type="email" id="email" required>
+            <button type="submit">Confirm Booking</button>
+        </form>
+        <div class="msg" id="msg"></div>
     </div>
     <footer>
         &copy; 2025 Tutorme | <a href="https://www.tutormee.co.uk" target="_blank">www.tutormee.co.uk</a>. All rights reserved.
     </footer>
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyAfOf2vN2YzPUAO6kfz4HSu8HYkK8TWZHY",
-            authDomain: "tutorme-99ca8.firebaseapp.com",
-            projectId: "tutorme-99ca8",
-            storageBucket: "tutorme-99ca8.appspot.com",
-            messagingSenderId: "1012080798952",
-            appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d"
-        };
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-
-        const videoList = document.getElementById('video-list');
-        db.collection("videos").orderBy("videoId").get().then((querySnapshot) => {
-            if (querySnapshot.empty) {
-                videoList.innerHTML = "<p style='grid-column:1/3;text-align:center;'>No videos available yet.</p>";
-            } else {
-                querySnapshot.forEach((doc) => {
-                    let videoDiv = document.createElement("div");
-                    videoDiv.classList.add("video-container");
-                    videoDiv.innerHTML = `<iframe src="https://www.youtube.com/embed/${doc.data().videoId}" frameborder="0" allowfullscreen></iframe>`;
-                    videoList.appendChild(videoDiv);
-                });
-            }
-        });
-    </script>
+    <!-- Add your Firebase JS here -->
 </body>
 </html>
