--- a/bookings.html
+++ b/bookings.html
@@ -6,71 +6,123 @@
     <title>Book a Session - TutorMe</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
-        body { font-family: 'Segoe UI', Arial, sans-serif; margin: 0; background: #f4f8fb; }
-        .header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 20px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        :root {
+            --sociology: #ffc300;
+            --psychology: #a259d9;
+            --chemistry: #38b000;
+            --biology: #00b4d8;
+            --physics: #4361ee;
+            --header: #fff;
+            --text: #222;
+            --accent: #f72585;
         }
-        .header .logo { font-size: 1.5em; font-weight: bold; }
-        .header nav a {
-            color: white;
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            margin: 0; padding: 0;
+            background: #f8f9fa;
+            color: var(--text);
+        }
+        header {
+            background: linear-gradient(90deg, var(--sociology), var(--psychology), var(--chemistry), var(--biology), var(--physics));
+            color: var(--header);
+            text-align: center;
+            padding: 2rem 1rem 1rem 1rem;
+        }
+        .website-link {
+            margin-top: 0.5rem;
+            font-size: 1.1rem;
+        }
+        .website-link a {
+            color: var(--header);
+            text-decoration: underline;
+        }
+        nav {
+            background: var(--header);
+            box-shadow: 0 2px 8px #0001;
+            padding: 1rem;
+            text-align: center;
+        }
+        nav a {
+            margin: 0 1rem;
+            color: var(--accent);
             text-decoration: none;
-            margin-left: 30px;
-            padding: 10px 20px;
-            border-radius: 6px;
-            font-size: 1em;
+            font-weight: bold;
+            transition: color 0.2s;
+        }
+        nav a:hover {
+            color: var(--physics);
+        }
+        .container {
+            max-width: 400px;
+            margin: 2.5rem auto;
+            background: #fff;
+            padding: 2rem 1.5rem;
+            border-radius: 16px;
+            box-shadow: 0 2px 12px #0002;
+            text-align: center;
+        }
+        h2 { color: var(--accent); text-align: center; margin-bottom: 30px; }
+        select {
+            width: 100%;
+            padding: 0.8rem;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 1rem;
+        }
+        .cta-btn {
+            background: var(--accent);
+            color: #fff;
+            padding: 1rem 2rem;
+            border-radius: 40px;
+            text-decoration: none;
+            font-weight: bold;
+            margin-top: 1.5rem;
+            display: inline-block;
+            border: none;
+            font-size: 1.1rem;
+            cursor: pointer;
             transition: background 0.2s;
         }
-        .header nav a:hover { background: #34495e; }
-        .container {
-            max-width: 600px;
-            margin: 60px auto;
-            background: white;
-            padding: 40px 30px;
-            border-radius: 16px;
-            box-shadow: 0 4px 24px rgba(44,62,80,0.10);
+        .cta-btn:hover {
+            background: var(--physics);
         }
-        h2 { color: #3498db; text-align: center; margin-bottom: 30px; }
-        select, button {
-            padding: 12px;
-            font-size: 1.1em;
-            margin-left: 10px;
-            border-radius: 6px;
-            border: 1px solid #ccc;
+        footer {
+            background: var(--accent);
+            color: #fff;
+            text-align: center;
+            padding: 1.5rem 1rem 1rem 1rem;
+            margin-top: 2rem;
+            font-size: 1.1rem;
         }
-        button {
-            background-color: #3498db;
-            color: white;
-            cursor: pointer;
-            border: none;
-            margin-left: 0;
-            margin-top: 20px;
-            width: 100%;
-            font-size: 1.1em;
+        footer a {
+            color: #fff;
+            text-decoration: underline;
         }
-        button:hover { background-color: #2980b9; }
     </style>
 </head>
 <body>
-    <!-- Consistent header for all pages -->
-    <header class="header">
-        <div class="logo">TutorMe</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="bookings.html">Bookings</a>
-            <a href="videos.html">Videos</a>
-            <a href="login.html">Admin Login</a>
-        </nav>
+    <header>
+        <h1>Tutorme</h1>
+        <p>Specialist online tutoring for A-Level & GCSE</p>
+        <div class="website-link">
+            Visit us: <a href="https://www.tutormee.co.uk" target="_blank">www.tutormee.co.uk</a>
+        </div>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="bookings.html">Bookings</a>
+        <a href="videos.html">Videos</a>
+        <a href="login.html">Admin Login</a>
+    </nav>
     <div class="container">
         <h2>Book a Tutoring Session</h2>
-        <select id="available-dates" style="width:100%;"></select>
-        <button onclick="bookSession()">Book Now</button>
+        <p>Select an available slot and book your free consultation.</p>
+        <select id="available-dates"></select>
+        <a id="book-btn" class="cta-btn" style="margin-top:1.5rem;cursor:pointer;">Book This Slot</a>
     </div>
+    <footer>
+        &copy; 2025 Tutorme | <a href="https://www.tutormee.co.uk" target="_blank">www.tutormee.co.uk</a>. All rights reserved.
+    </footer>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
@@ -87,33 +139,50 @@
         const db = firebase.firestore();
 
         const availableDates = document.getElementById('available-dates');
-        db.collection("availableSlots").where("booked", "==", false).get().then((querySnapshot) => {
-            if (querySnapshot.empty) {
-                let option = document.createElement("option");
-                option.text = "No available slots";
-                availableDates.appendChild(option);
-                availableDates.disabled = true;
-            } else {
-                querySnapshot.forEach((doc) => {
+        const bookBtn = document.getElementById('book-btn');
+
+        // Clear any existing options
+        availableDates.innerHTML = "";
+
+        db.collection("availableSlots")
+          .where("booked", "==", false)
+          .orderBy("date")
+          .get()
+          .then((querySnapshot) => {
+            // Get current time + 1 hour (in ms)
+            const now = Date.now();
+            const minTime = now + 60 * 60 * 1000; // 1 hour from now
+
+            let hasValid = false;
+            querySnapshot.forEach((doc) => {
+                const slotDate = new Date(doc.data().date).getTime();
+                if (slotDate > minTime) {
                     let option = document.createElement("option");
                     option.value = doc.id;
                     option.text = new Date(doc.data().date).toLocaleString();
                     availableDates.appendChild(option);
-                });
-            }
-        });
+                    hasValid = true;
+                }
+            });
 
-        function bookSession() {
-            const selectedDateId = availableDates.value;
-            if (selectedDateId) {
-                db.collection("availableSlots").doc(selectedDateId).update({
-                    booked: true
-                }).then(() => {
-                    alert("Session booked successfully!");
-                    location.reload();
-                });
+            if (!hasValid) {
+                let option = document.createElement("option");
+                option.text = "No available slots";
+                availableDates.appendChild(option);
+                availableDates.disabled = true;
+                bookBtn.style.display = "none";
+            } else {
+                availableDates.disabled = false;
+                bookBtn.style.display = "inline-block";
             }
-        }
+          });
+
+        bookBtn.onclick = function() {
+            const selectedDateId = availableDates.value;
+            if (selectedDateId && !availableDates.disabled) {
+                window.location.href = "book.html?slot=" + encodeURIComponent(selectedDateId);
+            }
+        };
     </script>
 </body>
 </html>
