--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Admin Login - TutorMe</title>
     <style>
         :root {
-            --sociology: #ffc300;
+            --sociology: #e7b718;
             --psychology: #a259d9;
             --chemistry: #38b000;
             --biology: #00b4d8;
