--- a/dashboard.html
+++ b/dashboard.html
@@ -62,6 +62,71 @@
             box-shadow: 0 2px 12px #0002;
         }
         h2 { color: var(--accent); text-align: center; margin-bottom: 30px; }
+        .section {
+            margin-bottom: 2.5rem;
+        }
+        .section h3 {
+            color: var(--psychology);
+            margin-bottom: 1rem;
+        }
+        .list {
+            background: #f8f9fa;
+            border-radius: 10px;
+            padding: 1rem;
+            margin-bottom: 1rem;
+            box-shadow: 0 1px 4px #0001;
+        }
+        .list-item {
+            padding: 0.7rem 0;
+            border-bottom: 1px solid #eee;
+        }
+        .list-item:last-child {
+            border-bottom: none;
+        }
+        .btn {
+            background: var(--accent);
+            color: #fff;
+            border: none;
+            border-radius: 20px;
+            padding: 0.5rem 1.2rem;
+            font-size: 1rem;
+            cursor: pointer;
+            margin-left: 1rem;
+            transition: background 0.2s;
+        }
+        .btn:hover {
+            background: var(--physics);
+        }
+        .small {
+            font-size: 0.95em;
+            color: #666;
+        }
+        .form-inline {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            align-items: center;
+            margin-bottom: 1.2rem;
+        }
+        .form-inline input[type="datetime-local"],
+        .form-inline input[type="text"] {
+            padding: 0.5rem;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 1rem;
+        }
+        .form-inline button {
+            margin-left: 0;
+            margin-top: 0;
+        }
+        .success {
+            color: var(--chemistry);
+            margin-left: 1rem;
+        }
+        .error {
+            color: var(--accent);
+            margin-left: 1rem;
+        }
         footer {
             background: var(--accent);
             color: #fff;
@@ -92,10 +157,285 @@
     </nav>
     <div class="container">
         <h2>Admin Dashboard</h2>
-        <!-- Add your dashboard content here -->
+
+        <div class="section">
+            <h3>Upcoming Bookings</h3>
+            <div class="list" id="bookings-list">
+                <div class="small">Loading bookings...</div>
+            </div>
+        </div>
+
+        <div class="section">
+            <h3>Unsold (Unbooked & Unbookable) Slots</h3>
+            <div class="list" id="unsold-list">
+                <div class="small">Loading unsold slots...</div>
+            </div>
+        </div>
+
+        <div class="section">
+            <h3>Available Slots</h3>
+            <form id="add-slot-form" class="form-inline">
+                <input type="datetime-local" id="slot-date" required>
+                <button type="submit" class="btn">Add Available Date</button>
+                <span id="slot-msg"></span>
+            </form>
+            <div class="list" id="slots-list">
+                <div class="small">Loading slots...</div>
+            </div>
+        </div>
+
+        <div class="section">
+            <h3>Videos</h3>
+            <form id="add-video-form" class="form-inline">
+                <input type="text" id="video-id" placeholder="YouTube Video ID" required>
+                <button type="submit" class="btn">Add Video</button>
+                <span id="video-msg"></span>
+            </form>
+            <div class="list" id="videos-list">
+                <div class="small">Loading videos...</div>
+            </div>
+        </div>
     </div>
     <footer>
         &copy; 2025 Tutorme | <a href="https://www.tutormee.co.uk" target="_blank">www.tutormee.co.uk</a>. All rights reserved.
     </footer>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyAfOf2vN2YzPUAO6kfz4HSu8HYkK8TWZHY",
+            authDomain: "tutorme-99ca8.firebaseapp.com",
+            projectId: "tutorme-99ca8",
+            storageBucket: "tutorme-99ca8.appspot.com",
+            messagingSenderId: "1012080798952",
+            appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
+        // Bookings (only future, with archive)
+        function loadBookings() {
+            db.collection("bookings").orderBy("slotTime").get().then(snapshot => {
+                const bookingsList = document.getElementById('bookings-list');
+                bookingsList.innerHTML = "";
+                const now = Date.now();
+                let hasFuture = false;
+                snapshot.forEach(doc => {
+                    const b = doc.data();
+                    const slotTime = new Date(b.slotTime).getTime();
+                    if (slotTime > now && !b.archived) {
+                        hasFuture = true;
+                        const div = document.createElement('div');
+                        div.className = "list-item";
+                        div.innerHTML = `<b>${new Date(b.slotTime).toLocaleString()}</b><br>
+                            Name: ${b.name}<br>
+                            Email: ${b.email}
+                            <button class="btn btn-archive-booking" data-id="${doc.id}" data-slotid="${b.slotId}">Archive</button>`;
+                        bookingsList.appendChild(div);
+                    }
+                });
+                if (!hasFuture) {
+                    bookingsList.innerHTML = "<div class='small'>No upcoming bookings.</div>";
+                }
+                // Attach archive handlers
+                document.querySelectorAll('.btn-archive-booking').forEach(btn => {
+                    btn.onclick = function() {
+                        if (confirm('Archive this booking?')) {
+                            const slotId = btn.getAttribute('data-slotid');
+                            db.collection("bookings").doc(btn.getAttribute('data-id')).update({ archived: true }).then(() => {
+                                if (slotId) {
+                                    db.collection("availableSlots").doc(slotId).update({ booked: false }).then(() => {
+                                        loadBookings();
+                                        loadSlots();
+                                        loadUnsold();
+                                    });
+                                } else {
+                                    loadBookings();
+                                }
+                            });
+                        }
+                    };
+                });
+            });
+        }
+        loadBookings();
+
+        // Unsold (Unbooked & Unbookable) Slots (past or too soon to book, with archive)
+        function loadUnsold() {
+            db.collection("availableSlots").where("booked", "==", false).orderBy("date").get().then(snapshot => {
+                const unsoldList = document.getElementById('unsold-list');
+                unsoldList.innerHTML = "";
+                const now = Date.now();
+                const minTime = now + 60 * 60 * 1000; // 1 hour from now
+                let hasUnsold = false;
+                snapshot.forEach(doc => {
+                    const s = doc.data();
+                    const slotDate = new Date(s.date).getTime();
+                    if ((slotDate <= minTime) && !s.archived) {
+                        hasUnsold = true;
+                        const div = document.createElement('div');
+                        div.className = "list-item";
+                        div.innerHTML = `<b>${new Date(s.date).toLocaleString()}</b>
+                            <button class="btn btn-archive-slot" data-id="${doc.id}">Archive</button>`;
+                        unsoldList.appendChild(div);
+                    }
+                });
+                if (!hasUnsold) {
+                    unsoldList.innerHTML = "<div class='small'>No unsold (unbookable) slots.</div>";
+                }
+                // Attach archive handlers
+                document.querySelectorAll('.btn-archive-slot').forEach(btn => {
+                    btn.onclick = function() {
+                        if (confirm('Archive this slot?')) {
+                            db.collection("availableSlots").doc(btn.getAttribute('data-id')).update({ archived: true }).then(() => {
+                                loadUnsold();
+                                loadSlots();
+                            });
+                        }
+                    };
+                });
+            });
+        }
+        loadUnsold();
+
+        // Available Slots (only future, with archive)
+        function loadSlots() {
+            db.collection("availableSlots").orderBy("date").get().then(snapshot => {
+                const slotsList = document.getElementById('slots-list');
+                slotsList.innerHTML = "";
+                const now = Date.now();
+                let hasFuture = false;
+                snapshot.forEach(doc => {
+                    const s = doc.data();
+                    const slotDate = new Date(s.date).getTime();
+                    if (slotDate > now && !s.archived) {
+                        hasFuture = true;
+                        const div = document.createElement('div');
+                        div.className = "list-item";
+                        div.innerHTML = `<b>${new Date(s.date).toLocaleString()}</b> - ${s.booked ? "<span style='color:var(--accent)'>Booked</span>" : "<span style='color:var(--chemistry)'>Available</span>"} 
+                            <button class="btn btn-archive-slot" data-id="${doc.id}">Archive</button>`;
+                        slotsList.appendChild(div);
+                    }
+                });
+                if (!hasFuture) {
+                    slotsList.innerHTML = "<div class='small'>No future slots available.</div>";
+                }
+                // Attach archive handlers
+                document.querySelectorAll('.btn-archive-slot').forEach(btn => {
+                    btn.onclick = function() {
+                        if (confirm('Archive this slot?')) {
+                            db.collection("availableSlots").doc(btn.getAttribute('data-id')).update({ archived: true }).then(() => {
+                                loadSlots();
+                                loadUnsold();
+                            });
+                        }
+                    };
+                });
+            });
+        }
+        loadSlots();
+
+        // Videos (with archive)
+        function loadVideos() {
+            db.collection("videos").orderBy("videoId").get().then(snapshot => {
+                const videosList = document.getElementById('videos-list');
+                videosList.innerHTML = "";
+                if (snapshot.empty) {
+                    videosList.innerHTML = "<div class='small'>No videos added.</div>";
+                } else {
+                    snapshot.forEach(doc => {
+                        const v = doc.data();
+                        if (!v.archived) {
+                            const div = document.createElement('div');
+                            div.className = "list-item";
+                            div.innerHTML = `<a href="https://www.youtube.com/watch?v=${v.videoId}" target="_blank">${v.videoId}</a>
+                                <button class="btn btn-archive-video" data-id="${doc.id}">Archive</button>`;
+                            videosList.appendChild(div);
+                        }
+                    });
+                }
+                // Attach archive handlers
+                document.querySelectorAll('.btn-archive-video').forEach(btn => {
+                    btn.onclick = function() {
+                        if (confirm('Archive this video?')) {
+                            db.collection("videos").doc(btn.getAttribute('data-id')).update({ archived: true }).then(() => {
+                                loadVideos();
+                            });
+                        }
+                    };
+                });
+            });
+        }
+        loadVideos();
+
+        // Add Available Slot
+        document.getElementById('add-slot-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const slotInput = document.getElementById('slot-date');
+            const msg = document.getElementById('slot-msg');
+            const dateValue = slotInput.value;
+            if (!dateValue) {
+                msg.textContent = "Please select a date and time.";
+                msg.className = "error";
+                return;
+            }
+            const isoDate = new Date(dateValue).toISOString();
+            db.collection("availableSlots").add({
+                date: isoDate,
+                booked: false,
+                archived: false
+            }).then(() => {
+                msg.textContent = "Slot added!";
+                msg.className = "success";
+                slotInput.value = "";
+                loadSlots();
+                loadUnsold();
+            }).catch(err => {
+                msg.textContent = "Error: " + err.message;
+                msg.className = "error";
+            });
+        });
+
+        // Add Video (auto-extract video ID from URL or ID)
+        document.getElementById('add-video-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const videoInput = document.getElementById('video-id');
+            const msg = document.getElementById('video-msg');
+            let input = videoInput.value.trim();
+
+            // Extract YouTube video ID from URL or ID
+            function extractVideoId(str) {
+                // Handles: https://youtu.be/ID, https://www.youtube.com/watch?v=ID, https://youtube.com/embed/ID, or just ID
+                const regex = /(?:youtu\.be\/|youtube\.com\/(?:embed\/|v\/|watch\?v=|watch\?.+&v=))([A-Za-z0-9_-]{11})/;
+                const match = str.match(regex);
+                if (match && match[1]) return match[1];
+                // If input is exactly 11 chars, assume it's a video ID
+                if (/^[A-Za-z0-9_-]{11}$/.test(str)) return str;
+                return null;
+            }
+
+            const videoId = extractVideoId(input);
+
+            if (!videoId) {
+                msg.textContent = "Please enter a valid YouTube video URL or ID.";
+                msg.className = "error";
+                return;
+            }
+
+            db.collection("videos").add({
+                videoId: videoId,
+                archived: false
+            }).then(() => {
+                msg.textContent = "Video added!";
+                msg.className = "success";
+                videoInput.value = "";
+                loadVideos();
+            }).catch(err => {
+                msg.textContent = "Error: " + err.message;
+                msg.className = "error";
+            });
+        });
+    </script>
 </body>
 </html>
