--- a/index.html
+++ b/index.html
@@ -212,6 +212,18 @@
             color: var(--biology);
             margin-bottom: 0.5rem;
         }
+         footer {
+            background: var(--accent);
+            color: #fff;
+            text-align: center;
+            padding: 1.5rem 1rem 1rem 1rem;
+            margin-top: 2rem;
+            font-size: 1.1rem;
+        }
+        footer a {
+            color: #fff;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
