--- a/videos.html
+++ b/videos.html
@@ -130,15 +130,19 @@
         const db = firebase.firestore();
 
         const videoList = document.getElementById('video-list');
-        db.collection("videos").orderBy("videoId").get().then((querySnapshot) => {
-            if (querySnapshot.empty) {
+        db.collection("videos").orderBy("videoId").get().then(snapshot => {
+            videoList.innerHTML = "";
+            if (snapshot.empty) {
                 videoList.innerHTML = "<p style='grid-column:1/3;text-align:center;'>No videos available yet.</p>";
             } else {
-                querySnapshot.forEach((doc) => {
-                    let videoDiv = document.createElement("div");
-                    videoDiv.classList.add("video-container");
-                    videoDiv.innerHTML = `<iframe src="https://www.youtube.com/embed/${doc.data().videoId}" frameborder="0" allowfullscreen></iframe>`;
-                    videoList.appendChild(videoDiv);
+                snapshot.forEach(doc => {
+                    const v = doc.data();
+                    if (!v.archived) {
+                        const div = document.createElement('div');
+                        div.className = "video-container";
+                        div.innerHTML = `<iframe src="https://www.youtube.com/embed/${v.videoId}" frameborder="0" allowfullscreen></iframe>`;
+                        videoList.appendChild(div);
+                    }
                 });
             }
         });
