--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos - TutorMe</title>
+    <title>Videos - Tutormee</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         :root {
@@ -95,14 +95,15 @@
 </head>
 <body>
     <header>
-        <h1>Tutorme</h1>
+        <h1>Tutormee</h1>
         <p>Specialist online tutoring for A-Level & GCSE</p>
         <div class="website-link">
-            Visit us: <a href="https://www.tutormee.co.uk" target="_blank">www.tutormee.co.uk</a>
+            Visit us: <a href="https://www.Tutormee.co.uk" target="_blank">www.Tutormee.co.uk</a>
         </div>
     </header>
     <nav>
         <a href="index.html">Home</a>
+        <a href="Our-services.html">Our Services</a>
         <a href="bookings.html">Bookings</a>
         <a href="videos.html">Videos</a>
         <a href="login.html">Admin Login</a>
@@ -112,7 +113,7 @@
         <div class="video-list" id="video-list"></div>
     </div>
     <footer>
-        &copy; 2025 Tutorme | <a href="https://www.tutormee.co.uk" target="_blank">www.tutormee.co.uk</a>. All rights reserved.
+        &copy; 2025 Tutormee | <a href="https://www.Tutormee.co.uk" target="_blank">www.Tutormee.co.uk</a>. All rights reserved.
     </footer>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
@@ -120,9 +121,9 @@
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyAfOf2vN2YzPUAO6kfz4HSu8HYkK8TWZHY",
-            authDomain: "tutorme-99ca8.firebaseapp.com",
-            projectId: "tutorme-99ca8",
-            storageBucket: "tutorme-99ca8.appspot.com",
+            authDomain: "Tutormee-99ca8.firebaseapp.com",
+            projectId: "Tutormee-99ca8",
+            storageBucket: "Tutormee-99ca8.appspot.com",
             messagingSenderId: "1012080798952",
             appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d"
         };
