--- a/Our-services.html
+++ b/Our-services.html
@@ -5,6 +5,8 @@
     <title>Tutormee | www.Tutormee.co.uk | A-Level & GCSE & GCSE Tutoring</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
 
         :root {
@@ -104,32 +106,77 @@
         .description-section strong {
             color: var(--accent);
         }
+        .offerings-section {
+            background: #e0f7fa;
+            border-left: 8px solid var(--biology);
+            border-radius: 12px;
+            margin: 2.5rem auto;
+            max-width: 850px;
+            padding: 2rem;
+            box-shadow: 0 2px 12px #00b4d820;
+        }
+        .offerings-section h2 {
+            color: var(--biology);
+            margin-top: 0;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+        .offerings-container {
+            display: flex;
+            gap: 2rem;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        .offering {
+            background: #fff;
+            padding: 1.5rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px #0001;
+            text-align: center;
+            flex: 1;
+            min-width: 250px;
+        }
+        .offering i {
+            font-size: 2.5rem;
+            color: var(--accent);
+            margin-bottom: 1rem;
+        }
+        .offering h3 {
+            color: var(--physics);
+            margin-top: 0;
+        }
         .subjects {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 2rem;
-            margin: 2.5rem 0;
+            margin: 2.5rem 1rem;
         }
         .subject {
             background: #fff;
             border-radius: 16px;
             box-shadow: 0 2px 12px #0002;
-            width: 270px;
-            padding: 1.8rem 1.2rem 1.2rem 1.2rem;
-            text-align: center;
+            width: 320px; /* Increased width for more content */
+            padding: 1.8rem 1.5rem; /* Adjusted padding */
+            text-align: left; /* Aligned text to the left for readability */
             transition: transform 0.2s, box-shadow 0.2s;
             position: relative;
+            display: flex;
+            flex-direction: column;
         }
         .subject:hover {
             transform: translateY(-6px) scale(1.03);
             box-shadow: 0 6px 20px #0003;
+        }
+        .subject-header {
+            text-align: center;
         }
         .subject.sociology { border-top: 6px solid var(--sociology); }
         .subject.psychology { border-top: 6px solid var(--psychology); }
         .subject.chemistry { border-top: 6px solid var(--chemistry); }
         .subject.biology { border-top: 6px solid var(--biology); }
         .subject.physics { border-top: 6px solid var(--physics); }
+
         .subject img {
             width: 68px;
             height: 68px;
@@ -142,77 +189,10 @@
         .subject p {
             font-size: 1rem;
             color: #444;
+            line-height: 1.5; /* Improved line height */
+            flex-grow: 1; /* Allows paragraph to take up space */
         }
-        /* Calendar and Appointments Section */
-        .calendar-appointments-section {
-            background: #e0f7fa;
-            border-left: 8px solid var(--biology);
-            border-radius: 12px;
-            margin: 2.5rem auto;
-            max-width: 900px;
-            padding: 2rem 2rem 1.5rem 2rem;
-            box-shadow: 0 2px 12px #00b4d820;
-        }
-        .calendar-appointments-section h2 {
-            color: var(--biology);
-            margin-top: 0;
-        }
-        .calendar-container {
-            margin: 1.5rem 0;
-            overflow-x: auto;
-        }
-        .appointments-section {
-            margin-top: 2rem;
-            background: #fff;
-            border-radius: 10px;
-            padding: 1.5rem;
-            box-shadow: 0 2px 10px #0001;
-        }
-        .appointments-section h3 {
-            color: var(--sociology);
-        }
-        .appointments-link {
-            display: inline-block;
-            background: var(--accent);
-            color: #fff;
-            padding: 0.8rem 2rem;
-            border-radius: 40px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1.1rem;
-            margin-top: 1rem;
-            transition: background 0.2s;
-        }
-        .appointments-link:hover {
-            background: var(--physics);
-        }
-        /* Simple calendar style */
-        table.calendar {
-            border-collapse: collapse;
-            width: 100%;
-            margin-bottom: 1rem;
-        }
-        table.calendar th, table.calendar td {
-            border: 1px solid #bbb;
-            padding: 0.5rem;
-            width: 14.2%;
-            text-align: center;
-        }
-        table.calendar th {
-            background: var(--biology);
-            color: #fff;
-            font-weight: bold;
-        }
-        table.calendar td {
-            background: #fff;
-        }
-        table.calendar caption {
-            font-weight: bold;
-            font-size: 1.1rem;
-            color: var(--biology);
-            margin-bottom: 0.5rem;
-        }
-         footer {
+        footer {
             background: var(--accent);
             color: #fff;
             text-align: center;
@@ -230,7 +210,7 @@
     <!-- Use this for header and nav on all pages -->
     <header>
         <h1>Tutormee</h1>
-        <p>Specialist online tutoring for A-Level & GCSE </p>
+        <p>Specialist online tutoring for A-Level & GCSE</p>
         <div class="website-link">
             Visit us: <a href="https://www.Tutormee.co.uk" target="_blank">www.Tutormee.co.uk</a>
         </div>
@@ -241,18 +221,30 @@
         <a href="bookings.html">Bookings</a>
         <a href="videos.html">Videos</a>
         <a href="login.html">Admin Login</a>
-        
     </nav>
-    <section class="hero">
-        <h2>Start Your Success Journey!</h2>
-        <p>Boost confidence and results in <b>Sociology</b>, <b>Psychology</b> (A-Level & GCSE) and <b>Chemistry</b>, <b>Biology</b>, <b>Physics</b> (GCSE).</p>
-        <a href="bookings.html" class="cta-btn">Book a Free Consultation</a>
+    
+    <!-- Our Offerings Section -->
+    <section class="offerings-section" id="our-offerings">
+        <h2>Our Offerings</h2>
+        <div class="offerings-container">
+            <div class="offering">
+                <i class="fas fa-user-graduate"></i>
+                <h3>1-1 Tuition</h3>
+                <p>We offer personalized 1-1 tuition tailored to meet the unique needs of each student.</p>
+            </div>
+            <div class="offering">
+                <i class="fas fa-video"></i>
+                <h3>Monthly Subscription</h3>
+                <p>For just <strong>£30 a month</strong>, pupils gain access to all our pre-recorded videos for science education.</p>
+            </div>
+        </div>
     </section>
-        <!-- Why Tutormee Section -->
+
+    <!-- Why Tutormee Section -->
     <section class="description-section" id="why-Tutormee">
-        <h2>Why should you choose Tutormee?</h2>
+        <h2>Why Choose Tutormee?</h2>
         <p>
-            At <strong>Tutormee</strong> we have teachers from different backgrounds who are nurturing and attentive to each pupil’s needs. As a collective, we bring over <strong>10 years of experience</strong> teaching A-Level & GCSE students.
+            At <strong>Tutormee</strong> we have teachers from different backgrounds who are nurturing and attentive to each pupil’s needs. As a collective, we bring over <strong>10 years of experience</strong> teaching A-Level & GCSE and GCSE students.
         </p>
         <ul>
             <li><strong>Experienced Head of Department</strong></li>
@@ -266,28 +258,38 @@
 
     <section class="subjects" id="subjects">
         <div class="subject sociology">
-            <img src="https://img.icons8.com/color/96/group-background-selected.png" alt="Sociology Icon"/>
-            <h3>Sociology (A-Level & GCSE)</h3>
-            <p>Understand society, culture, and human behaviour. Engaging lessons for exam success.</p>
+            <div class="subject-header">
+                <img src="https://img.icons8.com/color/96/group-background-selected.png" alt="Sociology Icon"/>
+                <h3>GCSE and A-Level & GCSE Sociology Tutor</h3>
+            </div>
+            <p>A Sociology tutor strengthens a student’s ability to analyse and critically examine relationships between social structures and individual agency. A tutor works alongside a student, helping them navigate their way through complex sociological theories. Students develop a good understanding of how to apply these principles to contemporary social issues. Sociology tuition encourages students to reflect on the world around them as well as their role within it. Tuition also teaches key skills that are beneficial in everyday life, such as how to present a coherent argument. A Sociology tutor challenges students’ to explore ideas on a deeper level, while increasing their competency across this popular subject.</p>
         </div>
         <div class="subject psychology">
-            <img src="https://img.icons8.com/color/96/psychology.png" alt="Psychology Icon"/>
-            <h3>Psychology (A-Level & GCSE)</h3>
-            <p>Explore the mind, behaviour, and mental processes. Expert support for top grades.</p>
+            <div class="subject-header">
+                <img src="https://img.icons8.com/color/96/psychology.png" alt="Psychology Icon"/>
+                <h3>A-Level & GCSE & GCSE Psychology Tutor</h3>
+            </div>
+            <p>An A-Level & GCSE & GCSE Psychology tutor fully guides students in their exploration of this rewarding subject. A tutor helps students develop their critical analysis, independent thinking and research skills. Tutors also work through a wide range of modules, case studies and exam preparation techniques. Psychology tuition hones and enhances students’ understanding of the ideas, values and histories that characterise ‘self’ and others. A Psychology tutor enables students to use high level specialist vocabulary, psychological concepts and data analysis. In addition, students learn about wider psychological concepts, key to relating to others in the world.</p>
         </div>
         <div class="subject chemistry">
-            <img src="https://img.icons8.com/color/96/test-tube.png" alt="Chemistry Icon"/>
-            <h3>Chemistry (GCSE)</h3>
+            <div class="subject-header">
+                <img src="https://img.icons8.com/color/96/test-tube.png" alt="Chemistry Icon"/>
+                <h3>Chemistry (GCSE)</h3>
+            </div>
             <p>Fun experiments and clear explanations to master GCSE Chemistry concepts.</p>
         </div>
         <div class="subject biology">
-            <img src="https://img.icons8.com/?size=100&id=9116&format=png&color=000000" alt="Biology Icon"/>
-            <h3>Biology (GCSE)</h3>
+            <div class="subject-header">
+                <img src="https://img.icons8.com/?size=100&id=9116&format=png&color=000000" alt="Biology Icon"/>
+                <h3>Biology (GCSE)</h3>
+            </div>
             <p>Interactive lessons on life sciences, tailored for GCSE students.</p>
         </div>
         <div class="subject physics">
-            <img src="https://img.icons8.com/color/96/physics.png" alt="Physics Icon"/>
-            <h3>Physics (GCSE)</h3>
+            <div class="subject-header">
+                <img src="https://img.icons8.com/color/96/physics.png" alt="Physics Icon"/>
+                <h3>Physics (GCSE)</h3>
+            </div>
             <p>Make sense of the physical world—engaging support for GCSE Physics.</p>
         </div>
     </section>
